# academic-research-mcp

./: .gitignore  CHANGELOG.md  README.md
academic-research-mcp/: .dockerignore  Dockerfile  academic_research_server.py  pyproject.toml  requirements-full.txt  requirements.txt  research_tools.py  utils.py
academic-research-mcp/docs/: API_SPECS.md
academic-research-mcp/enhancements/: advanced_features.py  deep_research.py  knowledge_management.py  monetization.py  premium_integrations.py  rag_enhancement.py  trend_analysis.py
academic-research-mcp/mcp_server/: mcp_instance.py  models.py  server.py  tools.py
academic-research-mcp/src/academic_research/adapters/: arxiv_adapter.py  crossref_adapter.py  semantic_scholar_adapter.py
academic-research-mcp/src/academic_research/domain/: models.py
academic-research-mcp/src/academic_research/enhancements/: citation_network.py  rag_enhancement.py
academic-research-mcp/src/academic_research/ports/: search_port.py
academic-research-mcp/src/academic_research/scripts/: pre-commit
academic-research-mcp/src/academic_research/services/: research_service.py
academic-research-mcp/src/academic_research/utils/: __init__.py
academic-research-mcp/tests/: test_academic_mcp.py  test_core.py
academic-research-mcp/tests_old/: test_providers_offline.py
