[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-research"
version = "1.0.0"
description = "Autonomous Academic Research Library and MCP Server"
authors = [
  { name="Academic Research MCP Project", email="your.email@university.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "fastmcp",
    "httpx",
    "diskcache",
    "fuzzywuzzy",
    "tenacity",
    "feedparser",
    "pydantic",
    "python-Levenshtein",
]

[project.optional-dependencies]
full = [
    "chromadb",
    "marker-pdf",
    "networkx",
    "plotly",
    "python-louvain",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pyzotero",
    "requests"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
